--- a/localization/autoptimize-nl_NL.po
+++ b/localization/autoptimize-nl_NL.po
@@ -1,20 +1,21 @@
-# Copyright (C) 2013 Autoptimize
-# This file is distributed under the same license as the Autoptimize package.
+# Translation of Development (trunk) in Dutch
+# This file is distributed under the same license as the Development (trunk) package.
 msgid ""
 msgstr ""
-"Project-Id-Version: Autoptimize 1.8.0\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/tag/autoptimize\n"
-"POT-Creation-Date: 2014-08-22 05:35:46+00:00\n"
-"PO-Revision-Date: 2014-08-29 07:12+0100\n"
-"Last-Translator: frank goossens (futtta) <futtta@gmail.com>\n"
-"Language-Team:  <futtta@gmail.com>\n"
-"Language: nl_NL\n"
+"Project-Id-Version: Development (trunk)\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/autoptimize\n"
+"POT-Creation-Date: 2015-12-08 22:03:53+00:00\n"
+"PO-Revision-Date: 2015-12-15 15:06+0100\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Generator: Poedit 1.6.8\n"
 
-#: autoptimize.php:124
+#: autoptimize.php:93
 msgid ""
 "Thank you for installing and activating Autoptimize. Please configure it "
 "under \"Settings\" -> \"Autoptimize\" to start improving your site's "
@@ -23,13 +24,22 @@ msgstr ""
 "Tof dat je Autoptimize geïnstalleerd hebt! Je kunt de plugin nu configureren "
 "onder \"Instellingen\" -> \"Autoptimize\"."
 
-#: autoptimize.php:130
+#: autoptimize.php:99
 msgid ""
 "Autoptimize has just been updated. Please <strong>test your site now</"
 "strong> and adapt Autoptimize config if needed."
 msgstr ""
 "Autoptimize is juist geüpdate, <strong>test je site nu</strong> en wijzig de "
 "Autoptimize instellingen indien nodig."
+
+#: autoptimize.php:105
+msgid ""
+"Autoptimize cannot write to the cache directory (default: /wp-content/cache/"
+"autoptimize), please fix to enable CSS/ JS optimization!"
+msgstr ""
+"Autoptimize kan niet naar het cache directory schrijven (standaard: /wp-"
+"content/cache/autoptimize), probeer dit te wijzigen om CSS/ JS optimalisatie "
+"mogelijk te maken!"
 
 #: classes/autoptimizeConfig.php:48
 msgid "Autoptimize Settings"
@@ -77,19 +87,23 @@ msgstr "Duw JavaScript in &lt;head&gt;?"
 
 #: classes/autoptimizeConfig.php:91
 msgid ""
-"For performance reasons it is better to include JavaScript at the bottom of "
-"HTML, but this sometimes breaks things. Especially useful for jQuery-based "
-"themes."
+"Load JavaScript early, reducing the chance of JS-errors but making it render "
+"blocking. You can disable this if you're not aggregating inline JS and you "
+"want JS to be deferred."
 msgstr ""
-"Voor rauwe performantie is het beter om JavaScript pas op het einde van de "
-"HTML binnen te halen, maar dit zorgt soms voor problemen, vooral bij jQuery-"
-"gebaseerde sites."
+"Door JavaScript vroeg te laden, verminder je de kans op JS-fouten, maar maak "
+"je die wel blokkerend voor de rendering van je pagina. Je kunt deze optie "
+"uitzetten als je de inline JS mee aggregeert en de JS laat wilt laden. "
 
-#: classes/autoptimizeConfig.php:94
+#: classes/autoptimizeConfig.php:95
 msgid "Look for scripts only in &lt;head&gt;?"
 msgstr "Haal javascript enkel uit &lt;head&gt;?"
 
-#: classes/autoptimizeConfig.php:96
+#: classes/autoptimizeConfig.php:95 classes/autoptimizeConfig.php:135
+msgid " <i>(deprecated)</i>"
+msgstr " <i>(verouderd)</i>"
+
+#: classes/autoptimizeConfig.php:97
 msgid ""
 "Mostly useful in combination with previous option when using jQuery-based "
 "templates, but might help keeping cache size under control."
@@ -97,11 +111,24 @@ msgstr ""
 "Vooral nuttig in combinatie met de vorige optie voor jQuery-gebaseerde "
 "sites, maar kan ook helpen om de cache-size onder controle te houden."
 
-#: classes/autoptimizeConfig.php:99
+#: classes/autoptimizeConfig.php:101
+msgid "Also aggregate inline JS?"
+msgstr "Inline JS ook aggregeren en optimaliseren? "
+
+#: classes/autoptimizeConfig.php:103
+msgid ""
+"Check this option for Autoptimize to also aggregate JS in the HTML. If this "
+"option is not enabled, you might have to \"force JavaScript in head\"."
+msgstr ""
+"Activeer deze optie om Autoptimize ook JS in the HTML te laten aggregeren. "
+"Als deze optie niet aanstaan, moet je de optie om Javascript vroeg te laden "
+"misschien aanzetten."
+
+#: classes/autoptimizeConfig.php:106
 msgid "Exclude scripts from Autoptimize:"
 msgstr "Sluit deze scripts uit van optimalisering:"
 
-#: classes/autoptimizeConfig.php:101
+#: classes/autoptimizeConfig.php:108
 msgid ""
 "A comma-seperated list of scripts you want to exclude from being optimized, "
 "for example 'whatever.js, another.js' (without the quotes) to exclude those "
@@ -110,28 +137,28 @@ msgstr ""
 "Lijst van scripts die je wilt uitsluiten van optimalisatie, gescheiden door "
 "komma's. Voorbeeld; 'whatever.js, another.js' (zonder de quotes)."
 
-#: classes/autoptimizeConfig.php:104
+#: classes/autoptimizeConfig.php:111
 msgid "Add try-catch wrapping?"
 msgstr "Voeg try-catch toe rond javascript?"
 
-#: classes/autoptimizeConfig.php:106
+#: classes/autoptimizeConfig.php:113
 msgid ""
-"If your scripts break because of an script error, you might want to try this."
+"If your scripts break because of a JS-error, you might want to try this."
 msgstr "Als je errors krijgt bij javascript-aggregatie, kun je dit proberen."
 
-#: classes/autoptimizeConfig.php:110
+#: classes/autoptimizeConfig.php:117
 msgid "CSS Options"
 msgstr "CSS Opties"
 
-#: classes/autoptimizeConfig.php:113
+#: classes/autoptimizeConfig.php:120
 msgid "Optimize CSS Code?"
 msgstr "Optimaliseer CSS Code?"
 
-#: classes/autoptimizeConfig.php:117
+#: classes/autoptimizeConfig.php:124
 msgid "Generate data: URIs for images?"
 msgstr "Vervang image-links in CSS door data: URIs?"
 
-#: classes/autoptimizeConfig.php:119
+#: classes/autoptimizeConfig.php:126
 msgid ""
 "Enable this to include small background-images in the CSS itself instead of "
 "as seperate downloads."
@@ -139,11 +166,19 @@ msgstr ""
 "Acitveer deze optie om kleine background-images in de CSS te bewaren in "
 "plaats van aparte files."
 
-#: classes/autoptimizeConfig.php:122
+#: classes/autoptimizeConfig.php:129
+msgid "Remove Google Fonts?"
+msgstr "Google Fonts verwijderen?"
+
+#: classes/autoptimizeConfig.php:131
+msgid "Check this if you don't need or want Google Fonts being loaded."
+msgstr "Vink deze optie aan als je geen Google Fonts wilt laden."
+
+#: classes/autoptimizeConfig.php:135
 msgid "Look for styles only in &lt;head&gt;?"
 msgstr "Haal CSS enkel uit &lt;head&gt;?"
 
-#: classes/autoptimizeConfig.php:124
+#: classes/autoptimizeConfig.php:137
 msgid ""
 "Don't autoptimize CSS outside the head-section. If the cache gets big, you "
 "might want to enable this."
@@ -151,11 +186,20 @@ msgstr ""
 "De CSS buiten de &lt;head&gt; niet mee optimaliseren. Kan helpen om de cache-"
 "omvang te beperken."
 
-#: classes/autoptimizeConfig.php:127
+#: classes/autoptimizeConfig.php:141
+msgid "Also aggregate inline CSS?"
+msgstr "CSS in HTML ook aggregeren en optimaliseren?"
+
+#: classes/autoptimizeConfig.php:143
+msgid "Check this option for Autoptimize to also aggregate CSS in the HTML."
+msgstr ""
+"Activeer deze optie om Autoptimize ook CSS in de HTML te laten aggregeren. "
+
+#: classes/autoptimizeConfig.php:146
 msgid "Inline and Defer CSS?"
 msgstr "Basis CSS in HTML laden, de rest uitstellen?"
 
-#: classes/autoptimizeConfig.php:129
+#: classes/autoptimizeConfig.php:148
 msgid ""
 "Inline \"above the fold CSS\" while loading the main autoptimized CSS only "
 "after page load. <a href=\"http://wordpress.org/plugins/autoptimize/faq/\" "
@@ -166,15 +210,15 @@ msgstr ""
 "autoptimize/faq/\" target=\"_blank\">Bekijk de FAQ</a> voor je deze optie "
 "activeert!"
 
-#: classes/autoptimizeConfig.php:133
+#: classes/autoptimizeConfig.php:152
 msgid "Paste the above the fold CSS here."
 msgstr "Kopiëer de above the fold CSS hier."
 
-#: classes/autoptimizeConfig.php:136
+#: classes/autoptimizeConfig.php:155
 msgid "Inline all CSS?"
 msgstr "Alle CSS rechtstreeks in HTML laden?"
 
-#: classes/autoptimizeConfig.php:138
+#: classes/autoptimizeConfig.php:157
 msgid ""
 "Inlining all CSS can improve performance for sites with a low pageviews/ "
 "visitor-rate, but may slow down performance otherwise."
@@ -183,25 +227,25 @@ msgstr ""
 "sites met een lage pageview/ bezoeker-ratio verbeteren, maar zal in andere "
 "gevallen de performantie verslechteren."
 
-#: classes/autoptimizeConfig.php:141
+#: classes/autoptimizeConfig.php:160
 msgid "Exclude CSS from Autoptimize:"
 msgstr "Sluit deze CSS uit van optimalisering:"
 
-#: classes/autoptimizeConfig.php:143
+#: classes/autoptimizeConfig.php:162
 msgid "A comma-seperated list of CSS you want to exclude from being optimized."
 msgstr ""
 "Lijst van CSS die je wilt uitsluiten van optimalisatie, gescheiden door "
 "komma's. Voorbeeld; 'whatever.css, style.css' (zonder de quotes)."
 
-#: classes/autoptimizeConfig.php:147
+#: classes/autoptimizeConfig.php:166
 msgid "CDN Options"
 msgstr "CDN Opties"
 
-#: classes/autoptimizeConfig.php:150
+#: classes/autoptimizeConfig.php:169
 msgid "CDN Base URL"
 msgstr "Basis CDN URL"
 
-#: classes/autoptimizeConfig.php:152
+#: classes/autoptimizeConfig.php:171
 msgid ""
 "Enter your CDN blog root directory URL if you want to enable CDN for images "
 "referenced in the CSS."
@@ -209,35 +253,35 @@ msgstr ""
 "Vul hier je CDN blog root directory URL in om afbeeldingen in je CSS via je "
 "CDN te laden."
 
-#: classes/autoptimizeConfig.php:156
+#: classes/autoptimizeConfig.php:175
 msgid "Cache Info"
 msgstr "Cache Info"
 
-#: classes/autoptimizeConfig.php:159
+#: classes/autoptimizeConfig.php:178
 msgid "Cache folder"
 msgstr "Cache folder"
 
-#: classes/autoptimizeConfig.php:163
+#: classes/autoptimizeConfig.php:182
 msgid "Can we write?"
 msgstr "Kunnen we schrijven naar die folder?"
 
-#: classes/autoptimizeConfig.php:164
+#: classes/autoptimizeConfig.php:183
 msgid "Yes"
 msgstr "Ja"
 
-#: classes/autoptimizeConfig.php:164
+#: classes/autoptimizeConfig.php:183
 msgid "No"
 msgstr "Nee"
 
-#: classes/autoptimizeConfig.php:167
+#: classes/autoptimizeConfig.php:186
 msgid "Cached styles and scripts"
 msgstr "CSS en scripts in cache"
 
-#: classes/autoptimizeConfig.php:171
+#: classes/autoptimizeConfig.php:194
 msgid "Save aggregated script/css as static files?"
 msgstr "Bewaar geoptimaliseerde CSS en JS als statische bestanden?"
 
-#: classes/autoptimizeConfig.php:173
+#: classes/autoptimizeConfig.php:196
 msgid ""
 "By default files saved are static css/js, uncheck this option if your "
 "webserver doesn't properly handle the compression and expiry."
@@ -245,42 +289,80 @@ msgstr ""
 "Standaard worden bestanden als statische css/js bewaard, deactiveer deze "
 "optie als je webserver compressie en cache-baarheid niet zelf kan afhandelen."
 
-#: classes/autoptimizeConfig.php:179
+#: classes/autoptimizeConfig.php:202
 msgid "Save Changes"
 msgstr "Bewaar wijzigingen"
 
-#: classes/autoptimizeConfig.php:180
+#: classes/autoptimizeConfig.php:203
 msgid "Save Changes and Empty Cache"
 msgstr "Bewaar en maak cache leeg."
 
-#: classes/autoptimizeConfig.php:188
+#: classes/autoptimizeConfig.php:224
+msgid ""
+"Need help? <a href='https://wordpress.org/plugins/autoptimize/faq/'>Check "
+"out the FAQ</a> or post your question on <a href='http://wordpress.org/"
+"support/plugin/autoptimize'>the support-forum</a>."
+msgstr ""
+"Hulp nodig? <a href='https://wordpress.org/plugins/autoptimize/faq/'>Bekijk "
+"de FAQ</a> of post je vraag in <a href='http://wordpress.org/support/plugin/"
+"autoptimize'>het support-forum</a>. "
+
+#: classes/autoptimizeConfig.php:225
+msgid "Happy with Autoptimize?"
+msgstr "Tevreden met Autoptimize?"
+
+#: classes/autoptimizeConfig.php:225
+msgid "Try my other plugins!"
+msgstr "Probeer mijn andere plugins!"
+
+#: classes/autoptimizeConfig.php:231
 msgid "futtta about"
 msgstr "futtta over"
 
 #. Plugin Name of the plugin/theme
-#: classes/autoptimizeConfig.php:190
+#: classes/autoptimizeConfig.php:233
 msgid "Autoptimize"
 msgstr "Autoptimize"
 
-#: classes/autoptimizeConfig.php:191
+#: classes/autoptimizeConfig.php:234
 msgid "WordPress"
 msgstr "WordPress"
 
-#: classes/autoptimizeConfig.php:192
+#: classes/autoptimizeConfig.php:235
 msgid "Web Technology"
 msgstr "Web Technologie"
 
-#: classes/autoptimizeConfig.php:197
+#: classes/autoptimizeConfig.php:250
 msgid "Do not donate for this plugin!"
 msgstr "Geef geen geld voor deze plugin!"
 
-#: classes/autoptimizeConfig.php:313
+#: classes/autoptimizeConfig.php:370
 msgid "Autoptimize Options"
 msgstr "Autoptimize Opties"
 
-#: classes/autoptimizeConfig.php:358 classes/autoptimizeConfig.php:364
+#: classes/autoptimizeConfig.php:419 classes/autoptimizeConfig.php:425
 msgid "Settings"
 msgstr "Instellingen"
+
+#: classes/autoptimizeConfig.php:488
+msgid "No items"
+msgstr "Geen items"
+
+#: classes/autoptimizeConfig.php:493
+msgid "Posted %s"
+msgstr "Gepost op %s"
+
+#: classlesses/autoptimizeCacheChecker.php:50
+msgid ""
+"Autoptimize's cache size is getting big, consider purging the cache.<br /"
+"><br />Have a look at <a href=\"https://wordpress.org/plugins/autoptimize/"
+"faq/\" target=\"_blank\">the Autoptimize FAQ</a> to see how you can keep the "
+"cache size under control."
+msgstr ""
+"Er zitten veel files in Autoptimize's cache, overweeg om die leeg te maken."
+"<br /><br />In <a href=\"https://wordpress.org/plugins/autoptimize/faq/\" "
+"target=\"_blank\">de Autoptimize FAQ</a> vind je meer info over hoe je de "
+"cache onder controle kunt houden. "
 
 #. Plugin URI of the plugin/theme
 msgid "http://blog.futtta.be/autoptimize"
@@ -301,14 +383,3 @@ msgstr "Frank Goossens (futtta)"
 #. Author URI of the plugin/theme
 msgid "http://blog.futtta.be/"
 msgstr "http://blog.futtta.be/"
-
-#~ msgid "Defer CSS loading?"
-#~ msgstr "Stel inladen CSS uit tot na binnenhalen pagina?"
-
-#~ msgid ""
-#~ "Normally CSS is loaded in the &lt;head&gt;-section of the HTML, but for "
-#~ "mobile performance reasons having it deferred can be better."
-#~ msgstr ""
-#~ "Normaal wordt CSS in de &lt;head&gt;-sectie van de HTML geladen, maar "
-#~ "voor mobiele performantie kan het beter zijn om dat pas op het einde van "
-#~ "de HTML te doen."
